Feature/record ref type (#1362)
* also refactor all methods in SourceCodeRepoInterface to use
repositoryIDs for future simplification
* Tighten enforcer rules
* Fix typo in gitignore
* Add tests and fix tests for branch detection for tools and workflows 
* Add bitbucket branch support
* properly type token source
* properly type workflow sourcecontrol